# workspace-poc

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  release-config.yml
.github/: dependabot.yml
.github/scripts/: check_build_system_requires.py
.github/workflows/: build-cache-from.yml  build-push.yml  cache-docker.yml  dependabot-build-system.yml  docker-push.yml  pypi-release.yml
folder1/: requirements.txt
folder2/: pyproject.toml
folder2/python/: pyproject.toml
