[build-system]
build-backend = "flit_core.buildapi"

[project]
name = "pkgtest"
authors = [{name = "Sample", email = "sample.project@example.org"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[build-system.requires]
flit_core = ["flit_core ==1.2"]
